--- a/src/Components/Login/style.css
+++ b/src/Components/Login/style.css
@@ -1,49 +1,67 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
 
 .login {
-    height: 395px;
-    width: 400px;
-
-    background-color: #aaa;
-
-    text-align: left;
-    padding: 25px;
-    padding-top: 0px;
-
-    position: absolute;
-    top: calc(35% - 200px);
-    left: calc(50% - 200px);
-    border-radius: 15px;
+    height: 615px;
+    width: 320px;
+    font-family: 'Roboto', sans-serif;
 }
 
-.heading {
-    font-size: 48px;
-    width: 400px;
+.login-top {
+    width: 100%;
+    height: calc(30% - 20px);
+    padding-top: 10px;
+    padding-bottom: 10px;
 
     display: flex;
+    align-content: center;
     justify-content: center;
-
-    margin-bottom: 10px;
-    margin-top: 15px;
+    background-color: #333;
 }
 
-.label {
-    font-size: 16px;
-    width: 600px;
+.login-logo {
+    height: 100%;
 }
 
-.input {
-    height: 50px;
-    width: calc(100% - 10px);
-
-    font-size: 20px;
-}
-
-.button {
-    height: 50px;
+.login-bottom {
     width: 100%;
+    height: calc(70% - 10px);
+    padding-top: 10px;
 
-    margin-top: 20px;
+    display: block;
+    align-content: center;
+    justify-content: center;
+    background-color: #DFDFDF;
+}
+
+.login-label {
+    font-size: 24px;
+    color: #884488;
+    font-weight: 700;
+
+    width: 100%;
+    padding-left: 10px;
+}
+
+.login-input {
+    height: 50px;
+    width: calc(100% - 30px);
+    margin-left: 10px;
     font-size: 20px;
-    border-radius: 10px;
+}
+
+.login-button {
+    height: 50px;
+    width: 250px;
+    margin-top: 15px;
+
+    font-size: 24px;
+    color: #FFF;
+    font-weight: 700;
+
+    background-color: #884488;
+    border-radius: 40px;
+    border: 2px #000 solid;
+
+    position: relative;
+    left: calc(50% - 125px);
 }
